--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="/css/portfolio.css">
+    <link rel="stylesheet" href="./css/portfolio.css">
 </head>
 <body>
     <header class="header container">
@@ -49,49 +49,85 @@
            <div class="examples">
             <ul class="works-examples-list list">
                 <li class="works-examples-item">
-                    <img src="./img-portfolio/img-a.jpg" alt="projects" width="370">
-                    <h2 class="works-title">Технокряк</h2>
-                    <p class="works-text">Веб-сайт</p>
+                  <article class="card">
+                    <div class="card-thumb"><img src="./img-portfolio/img-a.jpg" alt="projects" width="370"></div>
+                    <div class="description">
+                        <h2 class="works-title">Технокряк</h2>
+                        <p class="works-text">Веб-сайт</p>
+                    </div>
+                </article>
+            </li>
+                <li class="works-examples-item">
+                    <article class="card">
+                        <div class="card-thumb"><img src="./img-portfolio/img-b.jpg" alt="projects" width="370"></div>
+                        <div class="description">
+                            <h2 class="works-title">Постер New Orlean vs Golden Star</h2>
+                            <p class="works-text">Дизайн</p>
+                        </div>
+                    </article>  
                 </li>
                 <li class="works-examples-item">
-                    <img src="./img-portfolio/img-b.jpg" alt="projects" width="370">
-                    <h2 class="works-title">Постер New Orlean vs Golden Star</h2>
-                    <p class="works-text">Дизайн</p>
+                    <article class="card">
+                        <div class="card-thumb"><img src="./img-portfolio/img-c.jpg" alt="projects" width="370"></div>
+                        <div class="description">
+                            <h2 class="works-title">Ресторан Seafood</h2>
+                            <p class="works-text">Додаток</p>
+                        </div>
+                    </article>
                 </li>
                 <li class="works-examples-item">
-                    <img src="./img-portfolio/img-c.jpg" alt="projects" width="370">
-                    <h2 class="works-title">Ресторан Seafood</h2>
-                    <p class="works-text">Додаток</p>
+                    <article class="card">
+                        <div class="card-thumb"><img src="./img-portfolio/img-d.jpg" alt="projects" width="370"></div>
+                        <div class="description">
+                            <h2 class="works-title">Проєкт Prim</h2>
+                            <p class="works-text">Маркетинг</p>
+                        </div>
+                    </article>
                 </li>
                 <li class="works-examples-item">
-                    <img src="./img-portfolio/img-d.jpg" alt="projects" width="370">
-                    <h2 class="works-title">Проєкт Prime</h2>
-                    <p class="works-text">Маркетинг</p>
+                    <article class="card">
+                        <div class="card-thumb"><img src="./img-portfolio/img-e.jpg" alt="projects" width="370"></div>
+                        <div class="description">
+                            <h2 class="works-title">Проєкт Boxes</h2>
+                            <p class="works-text">Додаток</p>
+                        </div>
+                    </article>
                 </li>
                 <li class="works-examples-item">
-                    <img src="./img-portfolio/img-e.jpg" alt="projects" width="370">
-                    <h2 class="works-title">Проєкт Boxes</h2>
-                    <p class="works-text">Додаток</p>
+                    <article class="card">
+                        <div class="card-thumb"><img src="./img-portfolio/img-f.jpg" alt="projects" width="370"></div>
+                        <div class="description">
+                            <h2 class="works-title">Inspiration has no Borders</h2>
+                            <p class="works-text">Веб-сайт</p>
+                        </div>
+                    </article>
                 </li>
                 <li class="works-examples-item">
-                    <img src="./img-portfolio/img-f.jpg" alt="projects" width="370">
-                    <h2 class="works-title">Inspiration has no Borders</h2>
-                    <p class="works-text">Веб-сайт</p>
+                    <article class="card">
+                        <div class="card-thumb"><img src="./img-portfolio/img-g.jpg" alt="projects" width="370"></div>
+                        <div class="description">
+                            <h2 class="works-title">Видання Limited Editio</h2>
+                            <p class="works-text">Дизайн</p>
+                        </div>
+                    </article>
                 </li>
                 <li class="works-examples-item">
-                    <img src="./img-portfolio/img-g.jpg" alt="projects" width="370">
-                    <h2 class="works-title">Видання Limited Edition</h2>
-                    <p class="works-text">Дизайн</p>
+                    <article class="card">
+                        <div class="card-thumb"><img src="./img-portfolio/img-h.jpg" alt="projects" width="370"></div>
+                        <div class="description">
+                            <h2 class="works-title">Проект LAB</h2>
+                            <p class="works-text">Маркетинг</p>
+                        </div>
+                    </article>
                 </li>
                 <li class="works-examples-item">
-                    <img src="./img-portfolio/img-h.jpg" alt="projects" width="370">
-                    <h2 class="works-title">Проект LAB</h2>
-                    <p class="works-text">Маркетинг</p>
-                </li>
-                <li class="works-examples-item">
-                    <img src="./img-portfolio/img-j.jpg" alt="projects" width="370">
-                    <h2 class="works-title">Growing Business</h2>
-                    <p class="works-text">Додаток</p>
+                    <article class="card">
+                        <div class="card-thumb"><img src="./img-portfolio/img-j.jpg" alt="projects" width="370"></div>
+                        <div class="description">
+                            <h2 class="works-title">Growing Business</h2>
+                            <p class="works-text">Додаток</p>
+                        </div>
+                    </article>
                 </li>
             </ul>
         </div>
@@ -106,10 +142,12 @@
                     class="footer-link link">г. Киев, пр-т Леси Украинки, 26</a>
                 <div>
                     <ul class="footer-list list">
-                        <li class="footer-item"><a href="mailto:info@example.com"
-                                class="footer-contacts link">info@example.com</a></li>
-                        <li class="footer-item"><a href="tel:+380991111111" class="footer-contacts link">+38 099 111 11
-                                11</a></li>
+                        <div class="email">
+                            <li class="footer-item"><a href="mailto:info@example.com" class="footer-contacts link">info@example.com</a></li>
+                        </div>
+                        <div class="tel">
+                            <li class="footer-item"><a href="tel:+380991111111" class="footer-contacts link">+38 099 111 11 11</a></li>
+                        </div>
                     </ul>
                 </div>
             </address>
