--- a/index.html
+++ b/index.html
@@ -78,41 +78,47 @@
                     <ul class="team-list list">
                     <li class="team-item">
                         <img src="./images/image_team1.jpg" alt="team-member" width="270">
-                        <h3 class="team-aftertitle">Игорь Демьяненко</h3>
-                        <p class="team-text">Product Designer</p>
+                        <div class="team-member">
+                            <h3 class="team-aftertitle">Игорь Демьяненко</h3>
+                            <p class="team-text">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/image_team2.jpg" alt="team-member" width="270">
-                        <h3 class="team-aftertitle">Ольга Репина</h3>
-                        <p class="team-text">Frontend Developer</p>
+                        <div class="team-member">
+                            <h3 class="team-aftertitle">Ольга Репина</h3>
+                            <p class="team-text">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/image_team3.jpg" alt="team-member" width="270">
-                        <h3 class="team-aftertitle">Николай Тарасов</h3>
-                        <p class="team-text">Marketing</p>
+                        <div class="team-member">
+                            <h3 class="team-aftertitle">Николай Тарасов</h3>
+                            <p class="team-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/image_team4.jpg" alt="team-member" width="270">
-                        <h3 class="team-aftertitle">Михаил Ермаков</h3>
-                        <p class="team-text">UI Designer</p>
+                        <div class="team-member">
+                            <h3 class="team-aftertitle">Михаил Ермаков</h3>
+                            <p class="team-text">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
                 </div>
         </section>    
     </main>
     <footer class="footer page-footer">
-        <div class="container contacts">
+        <div class="container">
            <a href="/" class="footer-title link"><span class="footer-logo-one">Web</span><span
                 class="footer-logo-two">Studio</span></a>
           <address class="footer">
             <a href="https://goo.gl/maps/sLQ37TiBZNqdjhqi6" target="_blank" rel="noopener noreferrer nofollow"
                 class="footer-link link">г. Киев, пр-т Леси Украинки, 26</a>
-            <div>
                <ul class="footer-list list">
-                <li class="footer-item"><a href="mailto:info@example.com" class="footer-contacts link">info@example.com</a></li>
-                <li class="footer-item"><a href="tel:+380991111111" class="footer-contacts link">+38 099 111 11 11</a></li>
-            </ul>  
-            </div>        
+                <div class="email"><li class="footer-item"><a href="mailto:info@example.com" class="footer-contacts link">info@example.com</a></li></div>
+                <div class="tel"><li class="footer-item"><a href="tel:+380991111111" class="footer-contacts link">+38 099 111 11 11</a></li></div>
+            </ul>     
         </address>        
         </div>
 </footer>
