--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          </div>
      </section>
         <section class="features">
-            <div class="container features">
+            <div class="container">
               <ul class="features-list list">
                 <li class="features-item">
                     <h3 class="features-title">Внимание к деталям</h3>
@@ -63,7 +63,7 @@
          </div>
      </section>
         <section class="gallery container">
-            <div class="container">
+            <div class="galerry-c">
                 <h2 class="gallery-title title">Чем мы занимаемся</h2>
                     <ul class="gallery-list list">
                     <li class="gallery-item"><img src="./images/image.box.1.jpg" alt="photo" width="370"></li>
@@ -72,9 +72,9 @@
                 </ul>
             </div>
         </section>
-        <section class="team-section">
+        <section class="team-section container">
                 <h2 class="team-title title">Наша команда</h2>
-                <div class="team-info container">
+                <div class="team-info">
                     <ul class="team-list list">
                     <li class="team-item">
                         <img src="./images/image_team1.jpg" alt="team-member" width="270">
@@ -109,18 +109,18 @@
         </section>    
     </main>
     <footer class="footer page-footer">
-        <div class="container">
+        <div class="footer-c container">
            <a href="/" class="footer-title link"><span class="footer-logo-one">Web</span><span
                 class="footer-logo-two">Studio</span></a>
           <address class="footer">
-            <a href="https://goo.gl/maps/sLQ37TiBZNqdjhqi6" target="_blank" rel="noopener noreferrer nofollow"
-                class="footer-link link">г. Киев, пр-т Леси Украинки, 26</a>
-               <ul class="footer-list list">
-                <div class="email"><li class="footer-item"><a href="mailto:info@example.com" class="footer-contacts link">info@example.com</a></li></div>
-                <div class="tel"><li class="footer-item"><a href="tel:+380991111111" class="footer-contacts link">+38 099 111 11 11</a></li></div>
+            <div class="footer-address"><a href="https://goo.gl/maps/sLQ37TiBZNqdjhqi6" target="_blank" rel="noopener noreferrer nofollow"
+                class="footer-link link">г. Киев, пр-т Леси Украинки, 26</a></div>    
+                <ul class="footer-list list">
+                 <li class="footer-item"><a href="mailto:info@example.com" class="footer-contacts link">info@example.com</a></li>
+                 <li class="footer-item"><a href="tel:+380991111111" class="footer-contacts link">+38 099 111 11 11</a></li>
             </ul>     
-        </address>        
-        </div>
+    </address>        
+  </div>
 </footer>
 </body>
 </html>
