--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/portfolio.css">
 </head>
 <body>
-    <header class="header container">
+    <header class="header">
         <div class="container">
             <nav class="header-nav">
                 <a href="/" class="header-title link"><span class="header-logo-one">Web</span><span
@@ -134,22 +134,19 @@
 </section>
 </main>
     <footer class="footer page-footer">
-        <div class="container contacts">
+        <div class="footer-c container">
             <a href="/" class="footer-title link"><span class="footer-logo-one">Web</span><span
                     class="footer-logo-two">Studio</span></a>
             <address class="footer">
-                <a href="https://goo.gl/maps/sLQ37TiBZNqdjhqi6" target="_blank" rel="noopener noreferrer nofollow"
-                    class="footer-link link">г. Киев, пр-т Леси Украинки, 26</a>
-                <div>
-                    <ul class="footer-list list">
-                        <div class="email">
-                            <li class="footer-item"><a href="mailto:info@example.com" class="footer-contacts link">info@example.com</a></li>
-                        </div>
-                        <div class="tel">
-                            <li class="footer-item"><a href="tel:+380991111111" class="footer-contacts link">+38 099 111 11 11</a></li>
-                        </div>
-                    </ul>
+                <div class="footer-address"><a href="https://goo.gl/maps/sLQ37TiBZNqdjhqi6" target="_blank"
+                        rel="noopener noreferrer nofollow" class="footer-link link">г. Киев, пр-т Леси Украинки, 26</a>
                 </div>
+                <ul class="footer-list list">
+                    <li class="footer-item"><a href="mailto:info@example.com"
+                            class="footer-contacts link">info@example.com</a></li>
+                    <li class="footer-item"><a href="tel:+380991111111" class="footer-contacts link">+38 099 111 11 11</a>
+                    </li>
+                </ul>
             </address>
         </div>
     </footer>
