updated-hw-03-new

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="header container">
+    <header class="header">
         <div class="container">
             <nav class="header-nav">
                 <a href="/" class="header-title link"><span class="header-logo-one">Web</span><span
@@ -62,8 +62,8 @@
             </ul>
          </div>
      </section>
-        <section class="gallery container">
-            <div class="galerry-c">
+        <section class="gallery">
+            <div class="container">
                 <h2 class="gallery-title title">Чем мы занимаемся</h2>
                     <ul class="gallery-list list">
                     <li class="gallery-item"><img src="./images/image.box.1.jpg" alt="photo" width="370"></li>
@@ -72,8 +72,8 @@
                 </ul>
             </div>
         </section>
-        <section class="team-section container">
-                <h2 class="team-title title">Наша команда</h2>
+        <section class="team-section">
+            <div class="container"><h2 class="team-title title">Наша команда</h2>
                 <div class="team-info">
                     <ul class="team-list list">
                     <li class="team-item">
@@ -105,7 +105,8 @@
                         </div>
                     </li>
                 </ul>
-                </div>
+                </div></div>
+               
         </section>    
     </main>
     <footer class="footer page-footer">
