--- a/portfolio.html
+++ b/portfolio.html
@@ -35,15 +35,16 @@
         </div>
     </header>
     <main>
-        <h1 hidden>projects</h1>
-        <section class="works container section">
-           <div class="filters">
-             <ul class="works-filter-list list">
-                <li class="works-filter-item"><button type="button" class="works-filter-btn">Все</button></li>
-                <li class="works-filter-item"><button type="button" class="works-filter-btn">Веб-сайти</button></li>
-                <li class="works-filter-item"><button type="button" class="works-filter-btn">Додатки</button></li>
-                <li class="works-filter-item"><button type="button" class="works-filter-btn">Дизайн</button></li>
-                <li class="works-filter-item"><button type="button" class="works-filter-btn">Маркетинг</button></li>
+        <section class="works">
+            <div class="container">
+                <h1 hidden>projects</h1>
+            <div class="works-btn">
+                <ul class="works-filter-list list">
+                  <li class="works-filter-item"><button type="button" class="works-filter-btn">Все</button></li>
+                  <li class="works-filter-item"><button type="button" class="works-filter-btn">Веб-сайти</button></li>
+                  <li class="works-filter-item"><button type="button" class="works-filter-btn">Додатки</button></li>
+                  <li class="works-filter-item"><button type="button" class="works-filter-btn">Дизайн</button></li>
+                  <li class="works-filter-item"><button type="button" class="works-filter-btn">Маркетинг</button></li>
             </ul>
            </div> 
            <div class="examples">
@@ -131,6 +132,7 @@
                 </li>
             </ul>
         </div>
+    </div> 
 </section>
 </main>
     <footer class="footer page-footer">
