updated-hw-03-last

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
             </div>
         </section>
         <section class="team-section">
-            <div class="container"><h2 class="team-title title">Наша команда</h2>
+            <div class="container">
+              <h2 class="team-title title">Наша команда</h2>
                 <div class="team-info">
                     <ul class="team-list list">
                     <li class="team-item">
@@ -105,9 +106,9 @@
                         </div>
                     </li>
                 </ul>
-                </div></div>
-               
-        </section>    
+                </div>
+            </div>   
+        </section>
     </main>
     <footer class="footer page-footer">
         <div class="footer-c container">
